@@ -36,12 +36,10 @@
  *                       TestUnsafeVolatileCAE,
  *                       TestUnsafeVolatileGAS}
  * and <testtype> in {G1,
- *                    CMS,
- *                    CMSCondMark,
  *                    Serial,
  *                    Parallel,
  *                    Shenandoah,
- *                    ShenandoahTraversal}
+ *                    ShenandoahIU}
  */
 
 
@@ -90,30 +88,18 @@ public class TestVolatiles {
             procArgs = new String[argcount];
             procArgs[argcount - 2] = "-XX:+UseSerialGC";
             break;
-        case "CMS":
-            argcount = 10;
-            procArgs = new String[argcount];
-            procArgs[argcount - 3] = "-XX:+UseConcMarkSweepGC";
-            procArgs[argcount - 2] = "-XX:-UseCondCardMark";
-            break;
-        case "CMSCondMark":
-            argcount = 10;
-            procArgs = new String[argcount];
-            procArgs[argcount - 3] = "-XX:+UseConcMarkSweepGC";
-            procArgs[argcount - 2] = "-XX:+UseCondCardMark";
-            break;
         case "Shenandoah":
             argcount = 10;
             procArgs = new String[argcount];
             procArgs[argcount - 3] = "-XX:+UnlockExperimentalVMOptions";
             procArgs[argcount - 2] = "-XX:+UseShenandoahGC";
             break;
-        case "ShenandoahTraversal":
+        case "ShenandoahIU":
             argcount = 11;
             procArgs = new String[argcount];
             procArgs[argcount - 4] = "-XX:+UnlockExperimentalVMOptions";
             procArgs[argcount - 3] = "-XX:+UseShenandoahGC";
-            procArgs[argcount - 2] = "-XX:ShenandoahGCHeuristics=traversal";
+            procArgs[argcount - 2] = "-XX:ShenandoahGCMode=iu";
             break;
         default:
             throw new RuntimeException("unexpected test type " + testType);
@@ -330,48 +316,22 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar volatile and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release \\(elided\\)",
                     useCompressedOops ? "stlrw?" : "stlr",
+                    "membar_volatile \\(elided\\)",
+                    "ret",
                     "membar_volatile",
                     "dmb ish",
-                    "strb",
-                    "membar_volatile \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMSCondMark":
-                // a card mark volatile barrier should be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "stlrw?" : "stlr",
-                    "membar_volatile",
-                    "dmb ish",
-                    "storestore \\(elided\\)",
-                    "strb",
-                    "membar_volatile \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMS":
-                // a volatile card mark membar should not be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be
-                // generated as "dmb ishst"
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "stlrw?" : "stlr",
-                    "storestore",
-                    "dmb ishst",
-                    "strb",
-                    "membar_volatile \\(elided\\)",
-                    "ret"
+                    "strb"
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                  // Shenandoah generates normal object graphs for
                  // volatile stores
                 matches = new String[] {
@@ -398,16 +358,20 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar volatile and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release",
                     "dmb ish",
                     useCompressedOops ? "strw?" : "str",
                     "membar_volatile",
                     "dmb ish",
-                    "strb",
+                    "ret",
                     "membar_volatile",
                     "dmb ish",
-                    "ret"
+                    "strb"
                 };
                 break;
             case "CMSCondMark":
@@ -446,7 +410,7 @@ public class TestVolatiles {
                 break;
 
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                  // Shenandoah generates normal object graphs for
                  // volatile stores
                 matches = new String[] {
@@ -521,47 +485,22 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar acquire and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release \\(elided\\)",
                     useCompressedOops ? "cmpxchgw?_acq" : "cmpxchg_acq",
+                    "membar_acquire \\(elided\\)",
+                    "ret",
                     "membar_volatile",
                     "dmb ish",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMSCondMark":
-                // a card mark volatile barrier should be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "cmpxchgw?_acq" : "cmpxchg_acq",
-                    "membar_volatile",
-                    "dmb ish",
-                    "storestore \\(elided\\)",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMS":
-                // a volatile card mark membar should not be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "cmpxchgw?_acq" : "cmpxchg_acq",
-                    "storestore",
-                    "dmb ishst",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
+                    "strb"
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                 // For volatile CAS, Shenanodoah generates normal
                 // graphs with a shenandoah-specific cmpxchg
                 matches = new String[] {
@@ -588,16 +527,20 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar acquire and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release",
                     "dmb ish",
                     useCompressedOops ? "cmpxchgw? " : "cmpxchg ",
-                    "membar_volatile",
-                    "dmb ish",
-                    "strb",
                     "membar_acquire",
                     "dmb ish",
-                    "ret"
+                    "ret",
+                    "membar_volatile",
+                    "dmb ish",
+                    "strb"
                 };
                 break;
             case "CMSCondMark":
@@ -635,7 +578,7 @@ public class TestVolatiles {
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                 // For volatile CAS, Shenanodoah generates normal
                 // graphs with a shenandoah-specific cmpxchg
                 matches = new String[] {
@@ -726,47 +669,22 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar acquire and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release \\(elided\\)",
                     useCompressedOops ? "cmpxchgw?_acq" : "cmpxchg_acq",
+                    "membar_acquire \\(elided\\)",
+                    "ret",
                     "membar_volatile",
                     "dmb ish",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMSCondMark":
-                // a card mark volatile barrier should be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "cmpxchgw?_acq" : "cmpxchg_acq",
-                    "membar_volatile",
-                    "dmb ish",
-                    "storestore \\(elided\\)",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMS":
-                // a volatile card mark membar should not be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "cmpxchgw?_acq" : "cmpxchg_acq",
-                    "storestore",
-                    "dmb ishst",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
+                    "strb"
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                 // For volatile CAS, Shenanodoah generates normal
                 // graphs with a shenandoah-specific cmpxchg
                 matches = new String[] {
@@ -793,16 +711,20 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar acquire and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release",
                     "dmb ish",
                     useCompressedOops ? "cmpxchgw? " : "cmpxchg ",
-                    "membar_volatile",
-                    "dmb ish",
-                    "strb",
                     "membar_acquire",
                     "dmb ish",
-                    "ret"
+                    "ret",
+                    "membar_volatile",
+                    "dmb ish",
+                    "strb"
                 };
                 break;
             case "CMSCondMark":
@@ -840,7 +762,7 @@ public class TestVolatiles {
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                 // For volatile CAS, Shenanodoah generates normal
                 // graphs with a shenandoah-specific cmpxchg
                 matches = new String[] {
@@ -911,47 +833,22 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar acquire and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release \\(elided\\)",
                     useCompressedOops ? "atomic_xchgw?_acq" : "atomic_xchg_acq",
+                    "membar_acquire \\(elided\\)",
+                    "ret",
                     "membar_volatile",
                     "dmb ish",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMSCondMark":
-                // a card mark volatile barrier should be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "atomic_xchgw?_acq" : "atomic_xchg_acq",
-                    "membar_volatile",
-                    "dmb ish",
-                    "storestore \\(elided\\)",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
-                };
-                break;
-            case "CMS":
-                // a volatile card mark membar should not be generated
-                // before the card mark strb from the StoreCM and the
-                // storestore barrier from the StoreCM should be elided
-                matches = new String[] {
-                    "membar_release \\(elided\\)",
-                    useCompressedOops ? "atomic_xchgw?_acq" : "atomic_xchg_acq",
-                    "storestore",
-                    "dmb ishst",
-                    "strb",
-                    "membar_acquire \\(elided\\)",
-                    "ret"
+                    "strb"
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                 matches = new String[] {
                     "membar_release \\(elided\\)",
                     useCompressedOops ? "atomic_xchgw?_acq" : "atomic_xchg_acq",
@@ -976,16 +873,20 @@ public class TestVolatiles {
             case "G1":
                 // a card mark volatile barrier should be generated
                 // before the card mark strb
+                //
+                // following the fix for 8225776 the G1 barrier is now
+                // scheduled out of line after the membar acquire and
+                // and subsequent return
                 matches = new String[] {
                     "membar_release",
                     "dmb ish",
                     useCompressedOops ? "atomic_xchgw? " : "atomic_xchg ",
-                    "membar_volatile",
-                    "dmb ish",
-                    "strb",
                     "membar_acquire",
                     "dmb ish",
-                    "ret"
+                    "ret",
+                    "membar_volatile",
+                    "dmb ish",
+                    "strb"
                 };
                 break;
             case "CMSCondMark":
@@ -1023,7 +924,7 @@ public class TestVolatiles {
                 };
                 break;
             case "Shenandoah":
-            case "ShenandoahTraversal":
+            case "ShenandoahIU":
                 matches = new String[] {
                     "membar_release",
                     "dmb ish",
