@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,7 @@
  */
 package jdk.jfr.jvm;
 
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -51,51 +52,93 @@ import jdk.test.lib.process.ProcessTools;
  */
 public class TestDumpOnCrash {
 
-    private static final CharSequence LOG_FILE_EXTENSION = ".log";
-    private static final CharSequence JFR_FILE_EXTENSION = ".jfr";
+    private static final int ATTEMPTS = 3;
 
-    static class Crasher {
+    static class CrasherIllegalAccess {
         public static void main(String[] args) {
             Unsafe.getUnsafe().putInt(0L, 0);
         }
     }
 
-    public static void main(String[] args) throws Exception {
-        processOutput(runProcess());
+    static class CrasherHalt {
+        public static void main(String[] args) {
+            System.out.println("Running Runtime.getRuntime.halt");
+            Runtime.getRuntime().halt(17);
+        }
     }
 
-    private static OutputAnalyzer runProcess() throws Exception {
-        return new OutputAnalyzer(
-            ProcessTools.createJavaProcessBuilder(true,
+    static class CrasherSig {
+        public static void main(String[] args) throws Exception {
+            String signalName = args[0];
+            System.out.println("Sending SIG" + signalName + " to process " + ProcessHandle.current().pid());
+            Runtime.getRuntime().exec("kill -" + signalName + " " + ProcessHandle.current().pid()).waitFor();
+        }
+    }
+
+    public static void main(String[] args) throws Exception {
+        test(CrasherIllegalAccess.class, "", true);
+        test(CrasherIllegalAccess.class, "", false);
+        test(CrasherHalt.class, "", true);
+        test(CrasherHalt.class, "", false);
+
+        // Test is excluded until 8219680 is fixed
+        // @ignore 8219680
+        // test(CrasherSig.class, "FPE", true);
+    }
+
+    private static void test(Class<?> crasher, String signal, boolean disk) throws Exception {
+        // The JVM may be in a state it can't recover from, so try three times
+        // before concluding functionality is not working.
+        for (int attempt = 0; attempt < ATTEMPTS; attempt++) {
+            try {
+                verify(runProcess(crasher, signal, disk));
+                return;
+            } catch (Exception e) {
+                System.out.println("Attempt " + attempt + ". Verification failed:");
+                System.out.println(e.getMessage());
+                System.out.println("Retrying...");
+                System.out.println();
+            } catch (OutOfMemoryError | StackOverflowError e) {
+                // Could happen if file is corrupt and parser loops or
+                // tries to allocate more memory than what is available
+                return;
+            }
+        }
+        throw new Exception(ATTEMPTS + " attempts with failure!");
+    }
+
+    private static long runProcess(Class<?> crasher, String signal, boolean disk) throws Exception {
+        System.out.println("Test case for crasher " + crasher.getName());
+        final String flightRecordingOptions = "dumponexit=true,disk=" + Boolean.toString(disk);
+        Process p = ProcessTools.createTestJvm(
                 "-Xmx64m",
-                "-Xint",
                 "-XX:-CreateCoredumpOnCrash",
                 "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-                "-XX:StartFlightRecording=dumponexit=true",
-                Crasher.class.getName()).start());
+                "-XX:StartFlightRecording=" + flightRecordingOptions,
+                crasher.getName(),
+                signal)
+            .start();
+
+        OutputAnalyzer output = new OutputAnalyzer(p);
+        System.out.println("========== Crasher process output:");
+        System.out.println(output.getOutput());
+        System.out.println("==================================");
+
+        return p.pid();
     }
 
-    private static void processOutput(OutputAnalyzer output) throws Exception {
-        output.shouldContain("CreateCoredumpOnCrash turned off, no core file dumped");
+    private static void verify(long pid) throws IOException {
+        String fileName = "hs_err_pid" + pid + ".jfr";
+        Path file = Paths.get(fileName).toAbsolutePath().normalize();
 
-        final Path jfrEmergencyFilePath = getHsErrJfrPath(output);
-        Asserts.assertTrue(Files.exists(jfrEmergencyFilePath), "No emergency jfr recording file " + jfrEmergencyFilePath + " exists");
-        Asserts.assertNotEquals(Files.size(jfrEmergencyFilePath), 0L, "File length 0. Should at least be some bytes");
-        System.out.printf("File size=%d%n", Files.size(jfrEmergencyFilePath));
+        Asserts.assertTrue(Files.exists(file), "No emergency jfr recording file " + file + " exists");
+        Asserts.assertNotEquals(Files.size(file), 0L, "File length 0. Should at least be some bytes");
+        System.out.printf("File size=%d%n", Files.size(file));
 
-        List<RecordedEvent> events = RecordingFile.readAllEvents(jfrEmergencyFilePath);
+        List<RecordedEvent> events = RecordingFile.readAllEvents(file);
         Asserts.assertFalse(events.isEmpty(), "No event found");
         System.out.printf("Found event %s%n", events.get(0).getEventType().getName());
-    }
 
-    private static Path getHsErrJfrPath(OutputAnalyzer output) throws Exception {
-        // extract to find hs-err_pid log file location
-        final String hs_err_pid_log_file = output.firstMatch("# *(\\S*hs_err_pid\\d+\\.log)", 1);
-        if (hs_err_pid_log_file == null) {
-            throw new RuntimeException("Did not find hs_err_pid.log file in output.\n");
-        }
-        // the dumped out jfr file should have the same name and location but with a .jfr extension
-        final String hs_err_pid_jfr_file = hs_err_pid_log_file.replace(LOG_FILE_EXTENSION, JFR_FILE_EXTENSION);
-        return Paths.get(hs_err_pid_jfr_file);
+        Files.delete(file);
     }
 }
