@@ -23,11 +23,11 @@
 
 /*
  * @test
- * @bug 8206986
+ * @bug 8206986 8243548
  * @summary Verify that an switch expression over enum can be exhaustive without default.
- * @compile --enable-preview -source ${jdk.version} ExhaustiveEnumSwitch.java
+ * @compile ExhaustiveEnumSwitch.java
  * @compile ExhaustiveEnumSwitchExtra.java
- * @run main/othervm --enable-preview ExhaustiveEnumSwitch
+ * @run main ExhaustiveEnumSwitch
  */
 
 public class ExhaustiveEnumSwitch {
@@ -56,4 +56,12 @@ public class ExhaustiveEnumSwitch {
 }
 enum ExhaustiveEnumSwitchEnum {
     A, B;
+    class NestedClass {}
+    enum NestedEnum {}
+    interface NestedInterface {}
+    @interface NestedAnnotation {}
+    void nestedMethod() {}
+    static void nestedStaticMethod() {}
+    int nestedField;
+    static int nestedStaticField;
 }
